[package]
name = "floz-macros"
version = "0.1.1"
edition = "2021"
description = "Proc macro engine for floz — schema parsing and code generation"
authors = ["Floz Team"]
license = "MIT"
repository = "https://github.com/floz-rs/floz-macros"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
floz-macros-core = "0.1.0"
