[package]
name = "floz-macros"
version = "0.1.3"
edition = "2021"
description = "Proc macro engine for floz — schema parsing and code generation"
authors = ["Floz Team"]
license = "MIT"
repository = "https://github.com/floz-rs/floz-macros"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
floz-macros-core = { workspace = true }
